// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRemoveButton should render 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
    data-testid="TableRemoveButton"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          trash.svg
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`TableRemoveButton should render compact 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-danger-400 hover:text-theme-danger-500"
    data-testid="TableRemoveButton"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="sc-bdvvtL fCrhkg"
        height="16"
        width="16"
      >
        <svg>
          trash.svg
        </svg>
      </div>
    </div>
  </button>
</div>
`;
